@@ -1,0 +1,6 @@
+<h1>Shopify Basic App</h1>
+<a href="{{ url('/create-product') }}">Create Product</a>
+<pre>
+    {{var_dump($shop)}}
+    {{var_dump($products)}}
+</pre>
