@@ -8,4 +8,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [0.1.0] - 2018-06-11
 ### Added
-- Add .htaccess
+- Add .htaccess.
+- Add show shop.
+- Add show products.
+- Add create new product functional
